Drupal 8.2.0, 2016-10-05
------------------------
- Updated the git repository configuration to not normalize line endings for
  files of unknown type.
- Added vendor libraries:
    * Added Stack/Cors 1.0.0.
- Updated vendor libraries:
    * Updated to jQuery 2.2.3.
    * Updated to Twig 1.24.
    * Updated to CKEditor 4.5.11.
    * Updated to Symfony Routing 1.4.0.
    * Updated to Stack/Builder 1.0.4.
    * Updated to Guzzle 6.2.1.
- Added modules:
    * Added the Place Block module (experimental) to place a block on any page
      without having to navigate to the backend administration form.
    * Added the Settings Tray module (experimental) to edit the configuration of
      any block on the page. Its machine name in this release is "outside_in".
    * Added the Content Moderation module (experimental) to define and use
      workflow states such as Draft, Archived and Published. This functionality
      was previously provided by the contributed module Workbench Moderation.
    * Added the Datetime Range module (experimental) that provides a new field
      type with support for start and end dates.
- Raised stability levels of experimental modules:
    * Updated the BigPipe module from alpha to beta.
    * See https://www.drupal.org/core/experimental#versions for more
      information about the stability levels of experimental modules.
- Improved authoring features:
    * Relative URLs are automatically converted to absolute ones when content
      is output to an RSS feed.
    * Enabled revisions by default on new node types.
    * Added a redirect option to site-wide contact forms.
    * Whenever a new entity is created, a link to it is now provided in a
      status message, for easy access to it regardless of the form workflow.
    * Styled CKEditor dialogs to match Drupal dialogs.
- Improved site administration experience:
    * Numerous improvements to user interface text.
- Improved site building features: