@@ -186,6 +186,8 @@
      * @param {string} settings.replace_pattern
      *   A regular expression (without modifiers) matching disallowed characters
      *   in the machine name; e.g., '[^a-z0-9]+'.
+     * @param {string} settings.replace_token
+     *   A token to validate the regular expression.
      * @param {string} settings.replace
      *   A character to replace disallowed characters with; e.g., '_' or '-'.
      * @param {number} settings.maxlength
@@ -199,6 +201,7 @@
         text: source,
         langcode: drupalSettings.langcode,
         replace_pattern: settings.replace_pattern,
+        replace_token: settings.replace_token,
         replace: settings.replace,
         lowercase: true
       });
