@@ -1,0 +1,8 @@
+name: 'Taxonomy test'
+type: module
+description: 'Provides test hook implementations for taxonomy tests'
+package: Testing
+version: VERSION
+core: 8.x
+dependencies:
+  - taxonomy
