@@ -1,0 +1,38 @@
+<?php
+
+/**
+ * @file
+ * Provides test hook implementations for taxonomy tests.
+ */
+
+use Drupal\Core\Database\Query\AlterableInterface;
+
+/**
+ * Implements hook_query_alter().
+ */
+function taxonomy_test_query_alter(AlterableInterface $query) {
+  $value = \Drupal::state()->get(__FUNCTION__);
+  if (isset($value)) {
+    \Drupal::state()->set(__FUNCTION__, ++$value);
+  }
+}
+
+/**
+ * Implements hook_query_TAG_alter().
+ */
+function taxonomy_test_query_term_access_alter(AlterableInterface $query) {
+  $value = \Drupal::state()->get(__FUNCTION__);
+  if (isset($value)) {
+    \Drupal::state()->set(__FUNCTION__, ++$value);
+  }
+}
+
+/**
+ * Implements hook_query_TAG_alter().
+ */
+function taxonomy_test_query_taxonomy_term_access_alter(AlterableInterface $query) {
+  $value = \Drupal::state()->get(__FUNCTION__);
+  if (isset($value)) {
+    \Drupal::state()->set(__FUNCTION__, ++$value);
+  }
+}
